# llmesh

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DOC_INVENTORY.md  LICENSE  LICENSE-COMMERCIAL  NOTICE  README.md  SECURITY.md  SESSION_SUMMARY_2026-05-05.md  bandit-report.json  docker-compose.poc.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_hardening.md
.github/workflows/: build-wheels.yml  ci.yml  gitee-mirror-sync.yml  publish.yml  security.yml
benchmarks/: bench_serialization.py
c_bindings/: llmesh_event.h
certs/: ca.crt  node.crt
config/: node_identity.json  node_overrides.json
docker/node/: Dockerfile
docker/osv-proxy/: Dockerfile  proxy.py
docker/sandbox/: Dockerfile  run.sh  seccomp.json
docs/: API_STABILITY.md  ARCHITECTURE.md  CHANGELOG.md  DEBUG_REPORT_2026_05_10.md  DEMO.md  DEPLOYMENT.md  DEVELOPMENT.md  GLOSSARY.md  INDUSTRIAL_GUIDE.md  LAUNCH_KIT.md  MIGRATION.md  OBSERVABILITY.md  PEERING.md  PERFORMANCE.md  PLATFORMS.md  PUBLICATION_CHECKLIST.md  README.ja.md  README.zh.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2026-05-05.md  SESSION_SUMMARY_2026-05-06.md  SETUP.md  SETUP_GUIDE.md  SPECIFICATION.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md  _config.yml  index.md  qiita-index.md  qiita-industrial.md  qiita-intro.md  qiita-llm-platform.md  qiita-performance.md  qiita-security.md  requirements_speculative_mesh.md  v1.5.0-session-notes.md
docs/demos/: clustering_demo.md  clustering_demo_run.txt
docs/linkedin/: post_2026-05-14_overview.en.md  post_2026-05-14_overview.ja.md  post_2026-05-14_overview.zh.md
docs/market/: competitor-matrix.md  customer-personas.md  feature-pruning.md  fit-gap.md  gap-analysis.md  reports-2026-05.md  roadmap-v4-draft.md
docs/papers/: BULK_COLLECTION_GUIDE.md  CORPUS_INDEX.md  RAD_RESEARCH_GUIDE.md  README.md  _bench_results.md  datasets.md  paper1_spatial_summarizer.md  paper2_image_firewall.md  paper3_aoi_llm_diagnostic.md  paper4_dvs_industrial.md
docs/perf_comparison/: speculative_mesh.md
examples/: industrial_demo.py  llcore_backend_demo.py  research_pipeline_e2e.py
llmesh/: __init__.py  __main__.py
llmesh/audit/: __init__.py  trace.py
llmesh/auth/: __init__.py  signer.py  trusted_peers.py  verifier.py
llmesh/challenge/: __init__.py  bank.py  evaluator.py  protocol.py
llmesh/classifier/: __init__.py  data_level.py
llmesh/cli/: __init__.py  deps_audit.py  doctor.py  sbom.py  status.py
llmesh/config/: __init__.py  industrial_config.py  settings.py  toml_config.py
llmesh/core/: __init__.py  agent.py  cost_attribution.py  task.py  tool.py  trace.py  trace_logger.py
llmesh/data/: origins.toml  risk-db.toml
llmesh/discovery/: __init__.py  client.py  clustering.py  dns_sd.py  encrypted_announce.py  gossip.py  registry.py  router.py
llmesh/domains/: __init__.py
llmesh/export/: __init__.py  llove.py
llmesh/fairness/: __init__.py  ledger.py  policy.py  receipt.py  witness.py
llmesh/identity/: __init__.py  manifest.py  node_id.py  resolver.py  x25519.py
llmesh/industrial/: __init__.py  adapter_protocol.py  bacnet_adapter.py  c_abi.py  can_adapter.py  debug.py  dnp3_adapter.py  edge_profile.py  ethercat_adapter.py  event_density_map.py  explained_cusum.py  explainer.py  goose_adapter.py  hotelling_t2.py  metrics.py  modbus_adapter.py  mqtt_adapter.py  mt_engine.py  mt_online.py  multimodal_spc.py  opcua_adapter.py  pipeline.py  sensor_event.py  serial_adapter.py  spc_engine.py  tenant.py  tracing.py  video_cusum.py  vlm_feature_extractor.py  websocket_adapter.py
llmesh/llm/: __init__.py  anthropic_backend.py  backend.py  cn_llm.py  llamacpp.py  llcore_backend.py  ollama.py  openai_compatible.py  prompt.py
llmesh/llrepr/: __init__.py  diff.py  markdown_writer.py  mcp_result.py  model.py  schema.py  svg_writer.py  tui_writer.py  writer_base.py
llmesh/mcp/: __init__.py  nonce_store.py  sca_gate.py  schemas.py  server.py  stdio_server.py  validator.py
llmesh/orchestrator/: __init__.py  fanout.py  node_client.py  synthesizer.py
llmesh/predictive_push/: __init__.py  coordinator.py  demo.py  report_repr.py  sinks.py  transport.py  zones.py
llmesh/privacy/: __init__.py  firewall.py  image_firewall.py  image_summarizer.py  presidio_detector.py  sensor_summarizer.py  summarizer.py
llmesh/protocol/: __init__.py  _key_utils.py  adapter.py  assembler.py  chunk_sender.py  codec.py  device_profile.py  ftp_adapter.py  http_adapter.py  imap_adapter.py  local_file_adapter.py  message.py  outbox.py  pop3_adapter.py  qos.py  registry.py  reliable_stream.py  ros1_adapter.py  ros2_adapter.py  sftp_adapter.py  smtp_adapter.py  snmp_adapter.py  ssh_adapter.py  tcp_adapter.py  tcp_stream_adapter.py  telnet_adapter.py  udp_adapter.py  (+1 more)
rust_ext/: Cargo.toml  pyproject.toml
rust_ext/src/: lib.rs
scripts/: _apply_nosec.py  demo_clustering.py  demo_hardening.py  demo_skill_sync.py  gen_certs.py  llmesh_setup.py
tests/: conftest.py  helpers.py  test_adapter_plugins.py  test_adapter_protocol.py  test_adversarial_bench.py  test_anthropic_backend.py  test_audit.py  test_auth.py  test_backend_selection.py  test_bacnet_adapter.py  test_c_abi.py  test_can_adapter.py  test_challenge.py  test_circuit_breaker.py  test_cli_doctor_status_sbom.py  test_clustering.py  test_clustering_integration.py  test_codec.py  test_combo_speculative_kv.py  test_contribution.py  test_core_abstracts.py  test_core_cost_attribution.py  test_core_trace_logger.py  test_cross_protocol_security.py  test_data_level.py  test_device_profile.py  test_did_resolver.py  test_discovery.py  test_discovery_dns_sd.py  test_dnp3_adapter.py  test_domains_materials.py  test_edge_profile.py  test_encrypted_announce.py  test_endpoint_validator.py  test_ethercat_adapter.py  test_event_density_map.py  test_examples_research_pipeline_e2e.py  test_explained_cusum.py  test_explainer.py  test_export_llove.py  (+139 more)
tools/: bulk_corpus_collector.py  collect_image_papers.py  community_corpus_collector.py  gen_synthetic_dataset.py
(+132 files in other folders)
