[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmesh-mcp"
version = "0.1.2"
description = "Secure Local LLM Swarm over MCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Kazufumi Furuse" },
]
dependencies = [
    "cryptography>=42.0",
    "jsonschema>=4.21",
    "base58>=2.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.urls]
Homepage = "https://github.com/furuse-kazufumi/llmesh"
Repository = "https://github.com/furuse-kazufumi/llmesh"
Issues = "https://github.com/furuse-kazufumi/llmesh/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "bandit>=1.8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.bandit]
skips = []
exclude_dirs = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["llmesh"]
