[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The PyPI distribution name (`llmesh-mcp`) intentionally differs from the
# importable package name (`llmesh`). Hatchling needs to be told that the
# wheel/sdist should ship the `llmesh/` directory rather than guessing
# `llmesh_mcp/`.
[tool.hatch.build.targets.wheel]
packages = ["llmesh"]

[tool.hatch.build.targets.sdist]
include = [
    "/llmesh",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CONTRIBUTING.md",
    "/pyproject.toml",
]

[project]
name = "llmesh-mcp"
version = "3.1.0"
description = "Secure LLM Mesh over MCP — multi-LLM swarm + industrial IoT + privacy gateway"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.12"
authors = [{ name = "Kazufumi Furuse", email = "kazufumi@furuse.work" }]
keywords = [
    "llm", "mcp", "model-context-protocol", "ollama", "openai", "anthropic",
    "industrial-iot", "scada", "modbus", "opc-ua", "mqtt", "dnp3",
    "rag", "vector-search", "privacy", "pii", "presidio",
    "multivariate-analysis", "spc", "anomaly-detection",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=42.0",
    "jsonschema>=4.21",
    "base58>=2.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.urls]
Homepage = "https://github.com/furuse-kazufumi/llmesh"
Repository = "https://github.com/furuse-kazufumi/llmesh"
Issues = "https://github.com/furuse-kazufumi/llmesh/issues"
Changelog = "https://github.com/furuse-kazufumi/llmesh/blob/main/docs/CHANGELOG.md"
Documentation = "https://github.com/furuse-kazufumi/llmesh/tree/main/docs"

[project.scripts]
llmesh = "llmesh.__main__:main"

[project.entry-points."llmesh.adapters"]
http       = "llmesh.protocol.http_adapter:HTTPAdapter"
tcp        = "llmesh.protocol.tcp_adapter:TCPAdapter"
tcp_stream = "llmesh.protocol.tcp_stream_adapter:TCPStreamAdapter"
udp        = "llmesh.protocol.udp_adapter:UDPAdapter"
ssh        = "llmesh.protocol.ssh_adapter:SSHAdapter"
sftp       = "llmesh.protocol.sftp_adapter:SFTPAdapter"
smtp       = "llmesh.protocol.smtp_adapter:SMTPAdapter"
imap       = "llmesh.protocol.imap_adapter:IMAPAdapter"
pop3       = "llmesh.protocol.pop3_adapter:POP3Adapter"
ftp        = "llmesh.protocol.ftp_adapter:FTPAdapter"
snmp       = "llmesh.protocol.snmp_adapter:SNMPAdapter"
localfile  = "llmesh.protocol.local_file_adapter:LocalFileAdapter"
ros2       = "llmesh.protocol.ros2_adapter:ROS2Adapter"
ros1       = "llmesh.protocol.ros1_adapter:ROS1Adapter"
modbus     = "llmesh.industrial.modbus_adapter:ModbusAdapter"
serial     = "llmesh.industrial.serial_adapter:SerialAdapter"
opcua      = "llmesh.industrial.opcua_adapter:OPCUAAdapter"
mqtt       = "llmesh.industrial.mqtt_adapter:MQTTAdapter"
ethercat   = "llmesh.industrial.ethercat_adapter:EtherCATAdapter"
can        = "llmesh.industrial.can_adapter:CANAdapter"
bacnet     = "llmesh.industrial.bacnet_adapter:BACnetAdapter"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "bandit>=1.8",
    "httpx>=0.27",
    "hypothesis>=6.0",
    "ruff>=0.5",
    "coverage>=7.0",
]
msgpack   = ["msgpack>=1.0"]
claude    = ["mcp>=1.0"]
localfile = ["watchdog>=3.0"]
vision    = ["Pillow>=10.0"]
# Multi-protocol adapters (v0.3.0+)
udp   = ["zeroconf>=0.131"]
ssh   = ["paramiko>=3.4"]
email = ["aiosmtpd>=1.4"]
ftp   = ["pyftpdlib>=2.0"]
mgmt  = ["pysnmp>=6.1", "ntplib>=0.4"]
industrial = [
    "pymodbus>=3.6",       # Modbus TCP/RTU
    "pyserial>=3.5",       # RS-232 / RS-485
    "asyncua>=1.0",        # OPC-UA
    "paho-mqtt>=2.0",      # MQTT v3/v5
    "tomli-w>=1.0",        # TOML write-back for llmesh configure
    "numpy>=1.26",         # MT-method / SPC engines
    "scipy>=1.12",         # MT-method covariance / SPC statistics
]
ethercat = ["pysoem>=1.1"]       # Linux only; requires CAP_NET_RAW or root
can      = ["python-can>=4.3"]   # SocketCAN/Vector/PCAN/Kvaser/IXXAT/virtual
bacnet   = ["bacpypes3>=0.0.98"] # ASHRAE 135 BACnet/IP for BMS
# v3 privacy hardening — Microsoft Presidio for PII detection (E-2.1)
presidio = [
    "presidio-analyzer>=2.2",
    # spaCy + the small English NLP model (Presidio's default backend).
    # Users can swap in larger / multilingual models post-install.
    "spacy>=3.7",
]
# v3 RAG (Retrieval-Augmented Generation) — F-1
# Default backend is a pure-numpy in-memory store with .npz persistence.
# SqliteVectorStore is stdlib-only (no numpy needed).
rag = [
    "numpy>=1.26",
]
# v3-N7 SCADA — DNP3 outstation client (Linux/Windows)
# pydnp3 is the wire-protocol driver; the LLMesh adapter is a thin
# normalisation layer around it.
dnp3 = [
    "pydnp3>=0.1",
]
# v3-N15 multimodal SPC — Vision LLM caption parsing.
# vlm extra adds Pillow on top of the existing vision extra so the
# MockVisionCaptioner can produce richer captions.
vlm = [
    "Pillow>=10.0",
]
# v3.2 EAR-clean strategy — first-class 中国 LLM provider integration.
# Activates llmesh's normalized adapter layer for Qwen / DeepSeek / GLM /
# Kimi / Baichuan via their OpenAI-compatible endpoints (HTTP only — no
# US-origin SDKs required). Strategy ref: STRATEGY_PART2 §5.2, market
# layers L1-L3.
#
# Why httpx-only: keeping this extra US-dependency-free is the whole
# point. Each provider's official SDK (qwen-agent / dashscope / zhipuai /
# anthropic-compatible shims) is bundled into the corresponding
# `cn-llm-<vendor>` extra below for users who want richer non-OpenAI
# features at the cost of US-dependency surface.
cn-llm = [
    "httpx>=0.27",  # transport-only; OpenAI-compatible REST
]
cn-llm-qwen     = ["httpx>=0.27", "qwen-agent>=0.0.10"]
cn-llm-deepseek = ["httpx>=0.27"]                  # OpenAI-compat only
cn-llm-glm      = ["httpx>=0.27", "zhipuai>=2.0"]
cn-llm-kimi     = ["httpx>=0.27"]                  # OpenAI-compat only
cn-llm-baichuan = ["httpx>=0.27"]                  # OpenAI-compat only
# v3.2 国産 silicon (Ascend / Cambricon / 昆侖芯) runtime support.
# Stub for the cn-silicon extras family — full activation lands in v3.4
# once we have access to real silicon for verification. Listed here so
# the marker exists in v3.2 and integrators can plan around it.
cn-silicon = []  # populated in v3.4
# v3.2 compliance bundle — PII redaction + audit log + regulatory docs.
# Combines presidio with extra knobs for regulated industries.
compliance = [
    "presidio-analyzer>=2.2",
    "spacy>=3.7",
]
# v3.2 supply-chain / EAR-clean verification helpers (deps audit CLI).
# Stdlib-only — tomllib + importlib.metadata + argparse. No extra deps.
# Listed for discoverability; `llmesh.cli.deps_audit` works without it.
supply-chain = []
all   = ["zeroconf>=0.131", "paramiko>=3.4", "aiosmtpd>=1.4",
         "pyftpdlib>=2.0", "pysnmp>=6.1", "ntplib>=0.4",
         "watchdog>=3.0", "Pillow>=10.0",
         "httpx>=0.27", "qwen-agent>=0.0.10", "zhipuai>=2.0",
         "presidio-analyzer>=2.2", "spacy>=3.7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
asyncio_mode = "auto"

[tool.bandit]
# Project-policy skips for low-severity rules. See docs/SECURITY.md for rationale.
#  B101 (assert): used for module-level invariants and internal sanity checks; not a security control.
#  B104 (hardcoded_bind_all_interfaces): 0.0.0.0 is a documented opt-in binding mode for adapters
#        (see SETUP_GUIDE.md "Binding to all interfaces"); access is gated by upstream policy.
#  B107 (hardcoded_password_default): empty-string defaults represent "no credential", not a secret.
#  B110 (try_except_pass): defensive cleanup in adapter shutdown / optional-driver paths;
#        failure to close is non-fatal and intentionally swallowed.
# Medium+ severity issues are not skipped here — they are annotated per-site with `# nosec BXXX`.
skips = ["B101", "B104", "B107", "B110"]
exclude_dirs = ["tests"]
